kyverno/admission-controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyverno-admission-controller
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 40%
  template:
    spec:
      serviceAccountName: kyverno-admission-controller
      containers:
        - name: kyverno
          image: ghcr.io/kyverno/kyverno
          args:
            - --backgroundServiceAccountName=$(KYVERNO_BACKGROUD_CONTROLLER_SERVICE_ACCOUNT)
            - --enableTracing=$(KYVERNO_ENABLE_TRACING)
            - --enablePolicyException=$(KYVERNO_ENABLE_POLICY_EXCEPTION)
          resources:
            limits:
              memory: 384Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 9443
              name: https
              protocol: TCP
            - containerPort: 8000
              name: metrics-port
              protocol: TCP
          startupProbe:
            failureThreshold: 20
            httpGet:
              path: /health/liveness
              port: 9443
              scheme: HTTPS
            initialDelaySeconds: 2
            periodSeconds: 6
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /health/liveness
              port: 9443
              scheme: HTTPS
            initialDelaySeconds: 15
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /health/readiness
              port: 9443
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /.sigstore
              name: sigstore
      volumes:
        - name: sigstore
          emptyDir: {}
