kyverno/admission-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyverno-svc
spec:
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
---
apiVersion: v1
kind: Service
metadata:
  name: kyverno-svc-metrics
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: metrics-port
